--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 
 .header {
     max-width: 100%;
-    height: 90px;
+    height: fit-content;
+    min-height: 90px;
     display: flex;
     justify-content: space-between;
     align-items: center;
